--- a/index.html
+++ b/index.html
@@ -195,61 +195,22 @@
             opacity: 0;
         }
 
-        /* Overlay Chọn Vùng */
-        .overlay {
-            position: absolute;
-            top: 20%;
-            left: 20%;
-            width: 60%;
-            height: 60%;
-            border: 2px dashed var(--primary-color);
-            border-radius: 10px;
-            cursor: move;
-            display: none; /* Ẩn ban đầu, hiển thị khi camera hoạt động */
-            box-sizing: border-box;
-            z-index: 2;
-            background: rgba(40, 167, 69, 0.1); /* Nền mờ để dễ dàng xác định vùng chọn */
-        }
-
-        /* Handles cho việc thay đổi kích thước */
-        .resize-handle {
-            position: absolute;
-            width: 15px;
-            height: 15px;
-            background: var(--primary-color);
-            border: 1px solid #fff;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        .top-left {
-            top: -8px;
-            left: -8px;
-        }
-
-        .top-right {
-            top: -8px;
-            right: -8px;
-        }
-
-        .bottom-left {
-            bottom: -8px;
-            left: -8px;
-        }
-
-        .bottom-right {
-            bottom: -8px;
-            right: -8px;
-        }
-
         /* Cải thiện thiết kế Overlay */
         .overlay {
-            /* Đã được định nghĩa ở trên */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 60%; /* Giảm kích thước để tạo không gian xung quanh */
+            height: 60%;
+            transform: translate(-50%, -50%);
+            border: 3px solid rgba(40, 167, 69, 0.8); /* Sử dụng màu sắc trong suốt */
+            border-radius: 20px; /* Đường viền tròn hơn để thẩm mỹ */
+            box-sizing: border-box;
+            pointer-events: none; /* Không chặn các tương tác với video */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Thêm bóng đổ để nổi bật */
+            display: none; /* Hide overlay initially */
         }
 
-        /* Các phần CSS khác giữ nguyên... */
-
-        /* Các phần khác giữ nguyên */
         .button-container {
             display: flex;
             justify-content: center;
@@ -716,13 +677,7 @@
             <img id="placeholderImage" src="https://duan-khkt2024.github.io/bienbaogiaothong/model/h1.jpg" alt="Ứng dụng Nhận Diện Biển Báo Giao Thông">
             <!-- Video Element -->
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
-            <!-- Overlay Chọn Vùng -->
-            <div class="overlay" id="selectionOverlay">
-                <div class="resize-handle top-left"></div>
-                <div class="resize-handle top-right"></div>
-                <div class="resize-handle bottom-left"></div>
-                <div class="resize-handle bottom-right"></div>
-            </div>
+            <div class="overlay"></div>
         </div>
         <img id="capturedImage" alt="Ảnh đã chụp">
         <canvas id="canvas" style="display: none;"></canvas>
@@ -796,9 +751,8 @@
             <div id="instructionModalDescription">
                 <ol>
                     <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
-                    <li>Sử dụng overlay để chọn vùng chứa biển báo giao thông bạn muốn chụp.</li>
-                    <li>Khi overlay đã được đặt đúng vị trí, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
-                    <li>Đảm bảo camera của bạn được giữ ổn định và biển báo rõ ràng trong vùng chọn.</li>
+                    <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
+                    <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
                     <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                     <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
                     <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
@@ -807,9 +761,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Thêm CamanJS để xử lý ảnh -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js" integrity="sha512-DP1D99lyG5xGrkLtsqvNS7cZ5W3XmP0HXeGeCr7HfGU6fhyEV4NhZylLL/ev3yK2Uyw3BLqHD74X4GYnKKYJ3w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- TensorFlow.js -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
@@ -833,7 +784,6 @@
         const signCount = document.getElementById('totalSigns');
         const quizButton = document.getElementById('quizButton');
         const overlay = document.querySelector('.overlay');
-        const selectionOverlay = document.getElementById('selectionOverlay');
         let stream = null;
         let isProcessing = false;
         let cameraStarted = false; // Biến trạng thái camera
@@ -950,8 +900,8 @@
                 stream = await navigator.mediaDevices.getUserMedia({
                     video: {
                         facingMode: "environment",
-                        width: { min: 640, ideal: 1280, max: 1920 }, // Linh hoạt hơn trong độ phân giải
-                        height: { min: 480, ideal: 720, max: 1080 },
+                        width: { ideal: 1280 },
+                        height: { ideal: 720 },
                         // Optional: thêm các constraints khác nếu cần
                     },
                     audio: false
@@ -987,8 +937,6 @@
                     placeholderImage.style.display = 'none';
                     video.style.display = 'block';
                     overlay.style.display = 'block'; // Show overlay when video is active
-                    selectionOverlay.style.display = 'block'; // Hiển thị overlay
-                    showOverlay(); // Hiển thị overlay
 
                     await startCamera();
                     cameraStarted = true;
@@ -1022,59 +970,18 @@
                         throw new Error("Video chưa sẵn sàng.");
                     }
 
-                    // Tính toán vị trí và kích thước overlay tương ứng với kích thước video
-                    const overlayRect = selectionOverlay.getBoundingClientRect();
-                    const videoRect = video.getBoundingClientRect();
-
-                    const scaleX = videoWidth / videoRect.width;
-                    const scaleY = videoHeight / videoRect.height;
-
-                    const sx = (overlayRect.left - videoRect.left) * scaleX;
-                    const sy = (overlayRect.top - videoRect.top) * scaleY;
-                    const overlayWidth = overlayRect.width * scaleX;
-                    const overlayHeight = overlayRect.height * scaleY;
+                    // Kích thước và vị trí của overlay (60% chiều rộng và chiều cao)
+                    const overlayWidth = videoWidth * 0.6;
+                    const overlayHeight = videoHeight * 0.6;
+                    const sx = (videoWidth - overlayWidth) / 2;
+                    const sy = (videoHeight - overlayHeight) / 2;
 
                     // Cài đặt kích thước canvas theo kích thước overlay
-                    canvas.width = 224; // Kích thước chuẩn cho mô hình
-                    canvas.height = 224;
+                    canvas.width = overlayWidth;
+                    canvas.height = overlayHeight;
 
-                    // Vẽ phần ảnh trong khu vực overlay vào canvas với kích thước chuẩn
-                    context.drawImage(video, sx, sy, overlayWidth, overlayHeight, 0, 0, 224, 224);
-
-                    // Áp dụng các kỹ thuật tăng cường trước khi dự đoán
-                    let img = new Image();
-                    img.src = canvas.toDataURL('image/png');
-                    await new Promise((resolve) => {
-                        img.onload = () => {
-                            // Tăng độ sáng và độ tương phản
-                            const enhancedCanvas = document.createElement('canvas');
-                            enhancedCanvas.width = img.width;
-                            enhancedCanvas.height = img.height;
-                            const enhancedCtx = enhancedCanvas.getContext('2d');
-                            enhancedCtx.drawImage(img, 0, 0);
-
-                            // Kiểm tra xem CamanJS đã được tải chưa
-                            if (typeof Caman === 'undefined') {
-                                console.error("CamanJS chưa được tải.");
-                                alert("Đã xảy ra lỗi trong việc xử lý ảnh.");
-                                resolve();
-                                return;
-                            }
-
-                            // Sử dụng CamanJS để tăng độ sáng và độ tương phản
-                            Caman(enhancedCanvas, function () {
-                                this.brightness(10);
-                                this.contrast(30);
-                                this.sharpen(5);
-                                this.render(() => {
-                                    resolve();
-                                });
-                            });
-
-                            // Vẽ kết quả lên canvas chính
-                            context.drawImage(enhancedCanvas, 0, 0, 224, 224);
-                        };
-                    });
+                    // Vẽ phần ảnh trong khu vực overlay vào canvas
+                    context.drawImage(video, sx, sy, overlayWidth, overlayHeight, 0, 0, overlayWidth, overlayHeight);
 
                     const imageDataURL = canvas.toDataURL('image/png');
                     capturedImage.src = imageDataURL;
@@ -1082,7 +989,6 @@
                     capturedImage.style.opacity = 1;
                     video.style.display = 'none';
                     overlay.style.display = 'none';
-                    selectionOverlay.style.display = 'none'; // Ẩn overlay sau khi chụp
                     downloadButton.style.display = 'inline-block';
                     retakeButton.style.display = 'inline-block';
                     predictionResult.innerHTML = "";
@@ -1138,11 +1044,10 @@
 
             cameraStarted = false; // Reset trạng thái camera
 
-            // Show placeholder image and hide video, overlay
+            // Show placeholder image and hide video and overlay
             placeholderImage.style.display = 'block';
             video.style.display = 'none';
             overlay.style.display = 'none';
-            selectionOverlay.style.display = 'none'; // Ẩn overlay
             predictionResult.innerHTML = "";
             signMeaning.textContent = "";
             signMeaning.style.display = 'none'; // Ẩn signMeaning khi chụp lại
@@ -1155,7 +1060,6 @@
         function speakText(text) {
             if (!('speechSynthesis' in window)) {
                 console.warn('Trình duyệt của bạn không hỗ trợ Speech Synthesis.');
-                alert("Trình duyệt của bạn không hỗ trợ tính năng đọc văn bản.");
                 return;
             }
 
@@ -1166,9 +1070,6 @@
 
             if (vietnameseVoices.length > 0) {
                 utterThis.voice = vietnameseVoices[0];
-            } else {
-                console.warn('Không tìm thấy giọng nói tiếng Việt. Sử dụng giọng nói mặc định.');
-                alert("Không tìm thấy giọng nói tiếng Việt. Sẽ sử dụng giọng nói mặc định.");
             }
 
             synth.speak(utterThis);
@@ -1213,8 +1114,7 @@
                 await loadQA();
             } catch (err) {
                 console.error("Lỗi khi tải mô hình: ", err);
-                loadingModel.textContent = "Không thể tải mô hình. Vui lòng kiểm tra kết nối mạng.";
-                alert("Không thể tải mô hình. Vui lòng kiểm tra kết nối mạng.");
+                loadingModel.textContent = "Không thể tải mô hình.";
             }
         }
 
@@ -1235,9 +1135,6 @@
             }
 
             try {
-                // Hiển thị loading
-                loadingPrediction.style.display = 'flex';
-
                 // Sử dụng tf.tidy để giải phóng bộ nhớ sau khi thực hiện dự đoán
                 tf.tidy(() => {
                     // Chuyển đổi canvas thành tensor
@@ -1356,7 +1253,7 @@
             const file = event.target.files[0];
             if (file && file.type.startsWith('image/')) {
                 const reader = new FileReader();
-                reader.onload = async function(e) {
+                reader.onload = function(e) {
                     capturedImage.src = e.target.result;
                     capturedImage.style.display = 'block';
                     capturedImage.style.opacity = 1;
@@ -1364,7 +1261,6 @@
                     video.style.display = 'none';
                     placeholderImage.style.display = 'none';
                     overlay.style.display = 'none';
-                    selectionOverlay.style.display = 'none'; // Ẩn overlay
                     downloadButton.style.display = 'inline-block';
                     retakeButton.style.display = 'inline-block';
                     predictionResult.innerHTML = "";
@@ -1387,36 +1283,10 @@
                         } else {
                             canvasWidth = canvasHeight * aspectRatio;
                         }
-                        canvas.width = 224;
-                        canvas.height = 224;
-                        context.drawImage(img, 0, 0, 224, 224);
-
-                        // Áp dụng các kỹ thuật tăng cường
-                        const enhancedCanvas = document.createElement('canvas');
-                        enhancedCanvas.width = 224;
-                        enhancedCanvas.height = 224;
-                        const enhancedCtx = enhancedCanvas.getContext('2d');
-                        enhancedCtx.drawImage(canvas, 0, 0);
-
-                        // Kiểm tra xem CamanJS đã được tải chưa
-                        if (typeof Caman === 'undefined') {
-                            console.error("CamanJS chưa được tải.");
-                            alert("Đã xảy ra lỗi trong việc xử lý ảnh.");
-                            predictImage();
-                            return;
-                        }
-
-                        // Sử dụng CamanJS để tăng độ sáng, độ tương phản và áp dụng sharpen
-                        Caman(enhancedCanvas, function () {
-                            this.brightness(10);
-                            this.contrast(30);
-                            this.sharpen(5);
-                            this.render(() => {
-                                // Vẽ kết quả lên canvas chính
-                                context.drawImage(enhancedCanvas, 0, 0, 224, 224);
-                                predictImage();
-                            });
-                        });
+                        canvas.width = canvasWidth;
+                        canvas.height = canvasHeight;
+                        context.drawImage(img, 0, 0, canvasWidth, canvasHeight);
+                        predictImage();
                     };
                 };
                 reader.readAsDataURL(file);
