--- a/index.html
+++ b/index.html
@@ -195,20 +195,9 @@
             opacity: 0;
         }
 
-        /* Cải thiện thiết kế Overlay */
+        /* Ẩn overlay nếu không cần */
         .overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 60%; /* Giảm kích thước để tạo không gian xung quanh */
-            height: 60%;
-            transform: translate(-50%, -50%);
-            border: 3px solid rgba(40, 167, 69, 0.8); /* Sử dụng màu sắc trong suốt */
-            border-radius: 20px; /* Đường viền tròn hơn để thẩm mỹ */
-            box-sizing: border-box;
-            pointer-events: none; /* Không chặn các tương tác với video */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Thêm bóng đổ để nổi bật */
-            display: none; /* Hide overlay initially */
+            display: none;
         }
 
         .button-container {
@@ -322,11 +311,6 @@
             .qa-section h2 {
                 font-size: 1.1em; /* Giảm kích thước font chữ cho tiêu đề */
             }
-
-            /* Optional: Adjust slogan font size further if needed */
-            /* #slogan {
-                font-size: 0.9em;
-            } */
         }
 
         #predictionResult {
@@ -751,8 +735,8 @@
             <div id="instructionModalDescription">
                 <ol>
                     <li>Nhấn nút <strong>"Bắt Đầu"</strong> để khởi động camera.</li>
-                    <li>Khi camera đã khởi động, nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
-                    <li>Đảm bảo camera của bạn được đặt sao cho biển báo rõ ràng và trung tâm trong khung hình.</li>
+                    <li>Đưa biển báo giao thông vào trung tâm khung hình và đảm bảo biển báo chiếm phần lớn diện tích khung hình.</li>
+                    <li>Nhấn nút <strong>"Chụp Ảnh"</strong> để bắt đầu quá trình chụp hình biển báo giao thông.</li>
                     <li>Sau khi chụp, hệ thống sẽ tự động nhận diện biển báo và hiển thị kết quả.</li>
                     <li>Nhấn nút <strong>"Đọc"</strong> để nghe lại ý nghĩa của biển báo đã nhận diện.</li>
                     <li>Chọn nút <strong>"Làm Bài Kiểm Tra"</strong> để thực hiện bài kiểm tra giao thông.</li>
@@ -977,7 +961,7 @@
                     // Hide placeholder image and show video
                     placeholderImage.style.display = 'none';
                     video.style.display = 'block';
-                    overlay.style.display = 'block'; // Show overlay when video is active
+                    overlay.style.display = 'none'; // Ẩn overlay nếu không cần
 
                     await startCamera();
                     cameraStarted = true;
@@ -1016,19 +1000,13 @@
                         throw new Error("Video chưa sẵn sàng.");
                     }
 
-                    // Kích thước và vị trí của overlay (60% chiều rộng và chiều cao)
-                    const overlayWidth = videoWidth * 0.6;
-                    const overlayHeight = videoHeight * 0.6;
-                    const sx = (videoWidth - overlayWidth) / 2;
-                    const sy = (videoHeight - overlayHeight) / 2;
-
                     // Thiết lập kích thước canvas thành 224x224
                     const targetSize = 224;
                     canvas.width = targetSize;
                     canvas.height = targetSize;
 
-                    // Vẽ phần ảnh trong khu vực overlay vào canvas với kích thước 224x224
-                    context.drawImage(video, sx, sy, overlayWidth, overlayHeight, 0, 0, targetSize, targetSize);
+                    // Vẽ toàn bộ video frame vào canvas với kích thước 224x224
+                    context.drawImage(video, 0, 0, videoWidth, videoHeight, 0, 0, targetSize, targetSize);
 
                     // Kiểm tra độ mờ của hình ảnh
                     const variance = await checkImageBlurriness(canvas);
@@ -1046,6 +1024,8 @@
                     overlay.style.display = 'none';
                     downloadButton.style.display = 'inline-block';
                     retakeButton.style.display = 'inline-block';
+                    captureButton.style.display = 'none'; // Ẩn nút chụp ảnh sau khi chụp
+                    captureButton.textContent = "Bắt Đầu"; // Reset nhãn nút
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
                     signMeaning.style.display = 'none'; // Ẩn signMeaning khi chụp lại
@@ -1321,6 +1301,7 @@
                     overlay.style.display = 'none';
                     downloadButton.style.display = 'inline-block';
                     retakeButton.style.display = 'inline-block';
+                    captureButton.style.display = 'none'; // Ẩn nút chụp ảnh
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
                     signMeaning.style.display = 'none'; // Ẩn signMeaning khi tải ảnh lên
@@ -1342,28 +1323,8 @@
                         canvas.width = targetSize;
                         canvas.height = targetSize;
 
-                        // Tính toán tỷ lệ để giữ nguyên tỉ lệ ảnh khi vẽ vào canvas
-                        const aspectRatio = img.width / img.height;
-                        let drawWidth, drawHeight, dx, dy;
-
-                        if (aspectRatio > 1) {
-                            // Ngang hơn dọc
-                            drawWidth = targetSize;
-                            drawHeight = targetSize / aspectRatio;
-                            dx = 0;
-                            dy = (targetSize - drawHeight) / 2;
-                        } else {
-                            // Dọc hơn ngang hoặc tỉ lệ bằng
-                            drawHeight = targetSize;
-                            drawWidth = targetSize * aspectRatio;
-                            dy = 0;
-                            dx = (targetSize - drawWidth) / 2;
-                        }
-
-                        // Vẽ ảnh vào canvas với kích thước 224x224 và giữ tỷ lệ
-                        context.fillStyle = '#ffffff'; // Nền trắng nếu có khoảng trống
-                        context.fillRect(0, 0, targetSize, targetSize);
-                        context.drawImage(img, dx, dy, drawWidth, drawHeight);
+                        // Vẽ toàn bộ hình ảnh vào canvas với kích thước 224x224
+                        context.drawImage(img, 0, 0, img.width, img.height, 0, 0, targetSize, targetSize);
 
                         // Kiểm tra độ mờ của hình ảnh
                         const variance = await checkImageBlurriness(canvas);
